# cTester

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md
demo/lua_demo/: CMakeLists.txt  api.c  api.h  main.c  readme.txt  test.lua
demo/prolog_demo/: calc.c
demo/resize_image/: gui_sdl_ui.c  gui_sdl_ui.h  main.c
src/: CMakeLists.txt  gui_sdl.c  gui_sdl.h  gui_sdl_widget.c  gui_sdl_widget.h  main.c
test/resize_image/: CMakeLists.txt  gui_sdl_ui.c  gui_sdl_ui.h  main.c
